Bug 167044 - RTF import: bad image size inside shape
Summary: RTF import: bad image size inside shape
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2 t...
Keywords:
Depends on:
Blocks: RTF-Images
  Show dependency treegraph
 
Reported: 2025-06-16 11:51 UTC by Miklos Vajna
Modified: 2025-06-18 08:14 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (1.85 KB, application/rtf)
2025-06-16 11:51 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2025-06-16 11:51:40 UTC
Created attachment 201309 [details]
Minimal reproducer

Steps to reproduce the problem:

1) Open the attached RTF file
2) Check the size of the image inside the shape

Expected result: size is about 0.37cm x 0.37cm

Actual result: size is about 14.98 cm x 12.66 cm
Comment 1 Commit Notification 2025-06-17 15:16:38 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e0e415ba89925a933f8a07e4a2524269bd5c7495

tdf#167044 sw RTF import: fix bad image size in shape text

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2025-06-18 06:55:30 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/d81328b59856d2b370110dd1d92a9cce27af34f0

tdf#167044 sw RTF import: fix bad image size in shape text

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-06-18 08:14:10 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/b942ea1eb66c2639fd8255c78c4c367a5dd415b1

tdf#167044 sw RTF import: fix bad image size in shape text

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.